#42 feat create renter mypage

--- a/tiger-fe/public/index.html
+++ b/tiger-fe/public/index.html
@@ -18,7 +18,7 @@
 
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=13acf6cebfb178bf373f8075467b170a&libraries=services"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAP_KEY%&libraries=services"
     ></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
