#107 chore added vehicle price on map content

--- a/tiger-fe/public/index.html
+++ b/tiger-fe/public/index.html
@@ -32,7 +32,7 @@
     <div id="root"></div>
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAP_KEY%&libraries=services"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_MAP_KEY%&libraries=services,clusterer"
     ></script>
     <!--
       This HTML file is a template.
