--- a/tiger-fe/public/index.html
+++ b/tiger-fe/public/index.html
@@ -2,13 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#FF881B" />
+
+    <meta content="ta,iger" property="og:title" />
+    <meta content="https://taiger.kr" property="og:url" />
+    <meta content="%PUBLIC_URL%/meta_image.png" property="og:image" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      content="내가 있는 곳 어디든, 언제나 차가 필요할 때"
+      property="og:description"
     />
+    <meta content="ta,iger" name="title" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
